# jaggedalliance2

./: .gitignore  CMakeLists.txt  GenerateVS2022.bat
Standard Gaming Platform/: Button System.c  CMakeLists.txt  Compression.c  Container.c  DEBUG.C  DEBUG.H  FileMan.c  Font.c  JA2 SGP ALL.H  Ja2 Libs.c  LibraryDataBase.c  MemMan.c  PCX.C  WinFont.c  input.c  input.h  mousesystem.c  sgp.c  soundman.c  vsurface.c
